force-app/main/default/objects/Guest2__c/Guest2__c.object-meta.xml
<CustomObject>
    <label>Guest2</label>
    <nameField>
        <displayFormat>GI-{000}</displayFormat>
        <label>Guest ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>