force-app/main/default/objects/Guest2__c/fields/Cancelled_Hotel_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Hotel_Bookings__c</fullName>
    <label>Cancelled Hotel Bookings</label>
    <summaryFilterItems>
        <field>Guest_Reservation2__c.Is_Booking_Cancelled__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Guest_Reservation2__c.Guest2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>