force-app/main/default/objects/Guest2__c/fields/Completed_Restaurant_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Completed_Restaurant_Bookings__c</fullName>
    <label>Completed Restaurant Bookings</label>
    <summaryFilterItems>
        <field>Guest_Reservation2__c.Is_Visit_Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Guest_Reservation2__c.Guest2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>