force-app/main/default/objects/Guest2__c/fields/Has_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Has_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Subscription?</label>
    <type>Checkbox</type>
</CustomField>