force-app/main/default/objects/Guest2__c/fields/Last_REstaurabt_reservation_date_time__c.field-meta.xml
<CustomField>
    <fullName>Last_REstaurabt_reservation_date_time__c</fullName>
    <label>Last REstaurabt reservation date time</label>
    <summaryForeignKey>Guest_Reservation2__c.Guest2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>