force-app/main/default/objects/Guest2__c/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <label>Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Has_Subscription__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>