force-app/main/default/objects/Guest2__c/fields/Total_Hotel_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Total_Hotel_Bookings__c</fullName>
    <label>Total Hotel Bookings</label>
    <summaryFilterItems>
        <field>Guest_Reservation2__c.Check_In_Date_Time__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Guest_Reservation2__c.Guest2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>