force-app/main/default/objects/Guest2__c/fields/Total_REstaurant_Reservations__c.field-meta.xml
<CustomField>
    <fullName>Total_REstaurant_Reservations__c</fullName>
    <label>Total  REstaurant Reservations</label>
    <summaryFilterItems>
        <field>Guest_Reservation2__c.Reservation_Date_Time__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Guest_Reservation2__c.Guest2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>